<resources>
    <string name="app_name">Book Verse</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_search">Search</string>
    <string name="bottom_lib">Library</string>
    <string name="bottom_person">Person</string>
    <string name="txtLib">Thư viện</string>
    <string name="txtRecent">Hoạt động đọc gần đây</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dialogBackPress">Bạn có muốn thoát</string>
    <string name="dialogBackPressOk">Xác nhận</string>
    <string name="dialogBackPressCancel">Hủy</string>
    <string name="searchTitleTv">Bạn muốn đọc gì</string>
    <string name="searchTitle">Tìm kiếm</string>
    <string name="searchCancel">Hủy</string>
    <string name="searchHistoryTv">Lịch sử đọc</string>
    <string name="btnLogin">Đăng nhập</string>
    <string name="btnSignup">Đăng ký</string>
    <string name="titleForgot">Quên mật khẩu</string>
    <string name="submit">Gửi</string>
    <string name="close">Đóng</string>
    <string name="selectAvatar">Chọn ảnh</string>
    <string name="next">Tiếp</string>
    <string name="complete">Hoaàn thành</string>
    <string name="back">Quay lại</string>
    <string name="notifiloginSuccess">Đăng nhập thành công</string>
    <string name="notifiLoginFailure">Kiểm tra lại thông tin</string>
    <string name="notifiUpdateSuccess">Cập nhập thành công</string>
    <string name="notifiUsernameEmpty">Tên người dùng không được trống</string>
    <string name="notifiValiEmail">Email không hợp lệ</string>
    <string name="notifiEmptyEmail">Email không được trống</string>
    <string name="notifiValiPassword">Mật khẩu không hợp lệ</string>
    <string name="notifiEmptyPassword">Mật khẩu không được bỏ trống</string>
    <string name="notifiConfirmPassword">Mật khẩu xác nhận không đúng</string>
    <string name="notifiPhoneValid">Số điện thoại phải trên 10 số</string>
    <string name="hintUsername">Tên của bạn</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Mật khẩu</string>
    <string name="hintConfirmPassword">Xác nhận mật khẩu</string>
    <string name="hintPhone">Số điện thoại</string>
    <string name="txtBirthOfDate">Ngày sinh</string>
    <string name="loginNote">Bạn chưa có tài khoản?</string>
    <string name="signupNote">Bạn đã có tài khoản?</string>
    <string name="nameuserDefault">Nguời dùng</string>
    <string name="infBoookDowload">Tải xuống</string>
    <string name="infUser">Thông tin cá nhân</string>
    <string name="favoriteBook">Sách yêu thích</string>
    <string name="recentRead">Hoạt động đọc gần đây</string>
    <string name="settingAccount">Thiết lập tài khoản</string>
    <string name="settingApp">Cài đặt ứng dụng</string>
    <string name="DescriptionBack">Back</string>
    <string name="txtViral">Thinh hành</string>
    <string name="txtLogout">Đăng xuất</string>
    <string name="txtSummary">Tóm tắt</string>
    <string name="txtTag">Tag</string>
    <string name="notifiFailure">Có lỗi xảy ra</string>
</resources>